[workspace]
members = [
    "contracts/*",
    "packages/*",
]
exclude = [
    "packages/deployment",
    "packages/interface",
]

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
