[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
attestation-api = { path = "../../packages/attestation-api" }
common = { path = "../../packages/common" }
cosmwasm-std = "1"
cosmwasm-schema = "1"
cw-asset = "2.2"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw3 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.1.0" }
cw721 = "0.16.0"
cw721-base = { version = "0.18.0" }
enterprise-protocol = { path = "../../packages/enterprise-protocol" }
enterprise-factory-api = { path = "../../packages/enterprise-factory-api" }
enterprise-governance-api = { path = "../../packages/enterprise-governance-api" }
enterprise-governance-controller-api = { path = "../../packages/enterprise-governance-controller-api" }
enterprise-treasury-api = { path = "../../packages/enterprise-treasury-api" }
enterprise-versioning-api = { path = "../../packages/enterprise-versioning-api" }
funds-distributor-api = { path = "../../packages/funds-distributor-api" }
token-staking-api = { path = "../../packages/token-staking-api" }
denom-staking-api = { path = "../../packages/denom-staking-api" }
multisig-membership-api = { path = "../../packages/multisig-membership-api" }
membership-common-api = { path = "../../packages/membership-common-api" }
nft-staking-api = { path = "../../packages/nft-staking-api" }
itertools = "0.10"

poll-engine-api = { path = "../../packages/poll-engine-api" }


attestation = { path = "../attestation" }
denom-staking-membership = { path = "../denom-staking-membership" }
enterprise = { path = "../enterprise" }
enterprise-factory = { path = "../enterprise-factory" }
enterprise-governance = { path = "../enterprise-governance" }
enterprise-governance-controller = { path = "../enterprise-governance-controller" }
enterprise-outposts = { path = "../enterprise-outposts" }
enterprise-treasury = { path = "../enterprise-treasury" }
enterprise-versioning = { path = "../enterprise-versioning" }
funds-distributor = { path = "../funds-distributor" }
multisig-membership = { path = "../multisig-membership" }
nft-staking-membership = { path = "../nft-staking-membership" }
token-staking-membership = { path = "../token-staking-membership" }
cw721-metadata-onchain = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde-json-wasm = "1.0.0"
anyhow = "1"
cw-multi-test = "0.16.2"

[dev-dependencies]

