[package]
name = "enterprise-outposts"
version = "1.0.0"
authors = ["Terra Money <core@terra.money>"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["contract"]

# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use contract feature to enable all instantiate/execute/query exports
contract = []
interface = ["dep:cw-orch"]

[package.metadata.scripts]
optimize = """docker run --rm -v "${process.cwd()}":/code \
  -v "${path.join(process.cwd(), "../../", "packages")}":/packages \
  --mount type=volume,source="${contract}_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer${process.env.TERRARIUM_ARCH_ARM64 ? "-arm64" : ""}:0.12.6
"""

[dependencies]
bech32-no_std = "0.7.3"
common = { path = "../../packages/common" }
cw-asset = "2.4.0"
cosmwasm-std = "1"
cosmwasm-schema = "1"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
enterprise-outposts-api = { path = "../../packages/enterprise-outposts-api" }
enterprise-treasury-api = { path = "../../packages/enterprise-treasury-api" }
enterprise-protocol = { path = "../../packages/enterprise-protocol" }
ics20-helpers = { path = "../../packages/ics20-helpers" }
serde-json-wasm = "0.5.0"
sha2 = "0.10.8"
cw-orch = {version = "0.18.1", optional = true }


[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1"
cw-multi-test = "0.16.2"
cw20-base = "1.0.1"
itertools = "0.10.5"