[package]
name = "enterprise"
version = "0.4.0"
authors = ["Terra Money <core@terra.money>"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["contract"]

# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use contract feature to enable all instantiate/execute/query exports
contract = []

[package.metadata.scripts]
optimize = """docker run --rm -v "${process.cwd()}":/code \
  -v "${path.join(process.cwd(), "../../", "packages")}":/packages \
  --mount type=volume,source="${contract}_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer${process.env.TERRARIUM_ARCH_ARM64 ? "-arm64" : ""}:0.12.6
"""

[dependencies]
common = { path = "../../packages/common" }
cosmwasm-std = "1"
cosmwasm-schema = "1"
cw-asset = "2.2"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
cw721 = "0.17.0"
cw721-base = { version = "0.17.0", features = ["library"] }
enterprise-protocol = { path = "../../packages/enterprise-protocol" }
enterprise-factory-api = { path = "../../packages/enterprise-factory-api" }
enterprise-governance-api = { path = "../../packages/enterprise-governance-api" }
funds-distributor-api = { path = "../../packages/funds-distributor-api" }
poll-engine-api = { path = "../../packages/poll-engine-api" }
serde-json-wasm = "0.5.0"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1"
cw-multi-test = "0.16.2"
cw20-base = "1.0.1"
itertools = "0.10.5"
