[package]
name = "enterprise"
version = "1.1.1"
authors = ["Terra Money <core@terra.money>"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["contract"]

# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use contract feature to enable all instantiate/execute/query exports
contract = []
interface = ["dep:cw-orch"]

[package.metadata.scripts]
optimize = """docker run --rm -v "${process.cwd()}":/code \
  -v "${path.join(process.cwd(), "../../", "packages")}":/packages \
  --mount type=volume,source="${contract}_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer${process.env.TERRARIUM_ARCH_ARM64 ? "-arm64" : ""}:0.12.6
"""

[dependencies]
common = { path = "../../packages/common" }
attestation-api = { path = "../../packages/attestation-api" }
cosmwasm-std = { version = "1", features = ["stargate", "staking"] }
cosmwasm-schema = "1"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
enterprise-factory-api = { path = "../../packages/enterprise-factory-api" }
enterprise-governance-controller-api = { path = "../../packages/enterprise-governance-controller-api" }
enterprise-outposts-api = { path = "../../packages/enterprise-outposts-api" }
enterprise-treasury-api = { path = "../../packages/enterprise-treasury-api" }
enterprise-protocol = { path = "../../packages/enterprise-protocol" }
enterprise-versioning-api = { path = "../../packages/enterprise-versioning-api" }
funds-distributor-api = { path = "../../packages/funds-distributor-api" }
nft-staking-api = { path = "../../packages/nft-staking-api" }
token-staking-api = { path = "../../packages/token-staking-api" }
serde-json-wasm = "0.5.0"
cw-orch = { version = "0.18.1", optional = true }

